# nimora

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  platform-validation.yml
apps/cli/: Cargo.toml
apps/cli/src/: lib.rs  main.rs
apps/cli/tests/: cli.rs
apps/desktop/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: control-center-autostart.json  control-center-dialog.json  default.json  pet-window-dragging.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: asset_protocol.rs  asset_selection.rs  auto_mode_jobs.rs  auto_mode_runner.rs  away_summary.rs  backup_service.rs  companion_directive.rs  creator_workspace.rs  desktop_lifecycle.rs  desktop_lifeform.rs  diagnostic_report.rs  fail_closed_convergence.rs  lib.rs  main.rs  pet_physics.rs  pet_window_recovery.rs  process_budget.rs  reversible_transition.rs  system_context_sensor.rs  unattended_auto_mode.rs
archive/original-docs/: AI_AGENT.md  EVENTS_CONNECTORS.md  FUNCTIONAL_SPEC.md  MASTER_BRIEF.md  PRD.md  README.md  TECH_SPEC.md
crates/agent-auto-host/: Cargo.toml
crates/agent-auto-host/src/: lib.rs
crates/agent-context-admission/: Cargo.toml
crates/agent-provider-worker/: Cargo.toml
crates/agent-provider-worker/src/: host.rs  lib.rs  main.rs  openai_compatible.rs  sidecar.rs
crates/agent-provider-worker/tests/: ollama.rs  openai_compatible.rs  sidecar.rs
crates/agent-runtime/: Cargo.toml
crates/agent-tools/: Cargo.toml
crates/agent-tools/src/: lib.rs
crates/agent-tools/tests/: gateway_tools.rs
crates/agent-workspace-host/: Cargo.toml
crates/agent-workspace-host/src/: lib.rs
crates/asset-installer/: Cargo.toml
crates/asset-installer/src/: lib.rs
crates/automation-agent-bridge/: Cargo.toml
crates/automation-agent-bridge/src/: lib.rs
crates/automation-capability-bridge/: Cargo.toml
crates/automation-capability-bridge/src/: lib.rs
crates/automation-runtime/: Cargo.toml
crates/automation-runtime/src/: lib.rs
crates/capability-contract/: Cargo.toml
crates/creator-composition/: Cargo.toml
crates/creator-composition/src/: lib.rs
crates/creator-draft/: Cargo.toml
crates/creator-draft/src/: lib.rs
crates/desktop-context/: Cargo.toml
crates/desktop-context-macos/: Cargo.toml
crates/desktop-context-macos/src/: filter.rs  lib.rs  meeting.rs  rect.rs  types.rs
crates/desktop-context-macos/src/macos/: cf.rs  displays.rs  foreground.rs  idle.rs  mod.rs  power.rs  windows.rs
crates/desktop-context-windows/: Cargo.toml
crates/desktop-context-windows/src/: lib.rs
crates/diagnostics-bundle/: Cargo.toml
crates/model-importer/: Cargo.toml
crates/model-importer/src/: lib.rs  main.rs
crates/model-importer/tests/: process_isolation.rs
crates/module-agent-adapter/: Cargo.toml
crates/module-agent-adapter/src/: lib.rs
crates/persistence-sqlite/: Cargo.toml
crates/persistence-sqlite/src/: agent_goal_store.rs  authorization_grant_store.rs  auto_mode_attempt_resolution_store.rs  auto_mode_checkpoint_store.rs  auto_mode_commit_store.rs  auto_mode_store.rs  auto_mode_turn_attempt_store.rs  automation_agent_journal.rs  automation_approval_journal.rs  automation_catalog.rs  automation_governance.rs  automation_journal.rs  backup.rs  context_cache_store.rs  lib.rs  provider_config_store.rs  skill_approval_journal.rs  skill_execution_history.rs  workspace_snapshot_store.rs
crates/runtime-app/: Cargo.toml
crates/runtime-core/: Cargo.toml
crates/secret-store/: Cargo.toml
crates/skill-host/: Cargo.toml
crates/skill-host/src/: lib.rs
crates/skill-package/: Cargo.toml
crates/skill-package/src/: lib.rs
crates/skill-runtime/: Cargo.toml
crates/skill-runtime/src/: lib.rs
crates/skill-worker/: Cargo.toml
crates/skill-worker/src/: lib.rs  main.rs
crates/skill-worker/tests/: process_supervisor.rs
crates/system-context/: Cargo.toml
crates/system-context-sensor/: Cargo.toml
crates/system-context-sensor/src/: lib.rs
crates/system-context-windows/: Cargo.toml
crates/system-context-windows/src/: lib.rs
crates/user-code-gateway/: Cargo.toml
crates/user-code-gateway/src/: lib.rs
crates/user-code-host/: Cargo.toml
crates/user-code-host/src/: lib.rs
crates/user-code-package/: Cargo.toml
crates/user-code-package/src/: lib.rs
crates/user-code-policy/: Cargo.toml
crates/user-code-storage/: Cargo.toml
crates/user-code-worker/: Cargo.toml
crates/user-code-worker/src/: lib.rs  main.rs
crates/user-code-worker/tests/: process_supervisor.rs
docs/: ACCESSIBILITY_I18N.md  AGENT_COMPETITIVE_DESIGN.md  AI_AGENT_CLI.md  AI_AUGMENTED_CAPABILITY_CATALOG.md  AI_CAPABILITY_DEVELOPMENT_PLATFORM.md  AI_EXTENSION_FACTORY.md  AI_MODULE_INTERACTIONS.md  AI_NATIVE_EXTENSION_SURFACES.md  API_CONTRACT_GOVERNANCE.md  ARCHITECTURE.md  ARCHITECTURE_PATTERNS.md  AUTO_AUTHORIZATION.md  CUSTOMIZATION_ASSETS.md  DELIVERY_TESTING.md  DEPLOYMENT_OPERATIONS.md  DESIGN_AESTHETICS.md  DESKTOP_LIFEFORM_CONTEXT.md  DESKTOP_PET_EXPERIENCE.md  DEVELOPMENT_GOVERNANCE.md  EXTENSION_ECOSYSTEM.md  FEATURE_EVOLUTION.md  FUNCTIONAL_TEST_PLAN.md  FUTURE_EVOLUTION_GOVERNANCE.md  GIT_WORKFLOW.md  GREENFIELD_BASELINE.md  IMPLEMENTATION_STATUS.md  INDEX.md  MILESTONE_REVIEWS.md  MODEL_REASONING_POLICY.md  MODEL_RENDERING_IMPORT.md  OBSERVABILITY_DIAGNOSTICS.md  OFFLINE_DATA_LIFECYCLE.md  PRODUCT_SPEC.md  PROGRAMMABLE_CONTROL.md  RELIABILITY_RESILIENCE.md  RISK_REGISTER.md  RUNBOOK.md  SECRET_MANAGEMENT.md  SECURITY_PRIVACY.md  SYSTEM_CONTEXT_ADAPTERS.md  (+4 more)
docs/adr/: ADR-001-tauri-rust-core.md  ADR-002-extension-isolation.md  ADR-003-assets-are-data.md  ADR-004-command-event-separation.md  ADR-005-renderer-importer-boundary.md  ADR-006-user-code-sandbox.md  ADR-007-product-name-asterpet.md  (+5 more)
scripts/: build-sidecars.mjs  build-user-code-sidecar.mjs  check-architecture-boundaries.mjs
(+122 files in other folders)
