[workspace]
members = [
  "crates/persistence-sqlite",
  "crates/runtime-app",
  "crates/runtime-core",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
rust-version = "1.97"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.38", features = ["bundled"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.18", features = ["v7", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
