[workspace]
members = [
  "apps/cli",
  "crates/agent-runtime",
  "crates/agent-provider-worker",
  "crates/agent-tools",
  "crates/diagnostics-bundle",
  "crates/asset-installer",
  "crates/model-importer",
  "crates/user-code-policy",
  "crates/user-code-host",
  "crates/user-code-gateway",
  "crates/user-code-worker",
  "crates/user-code-package",
  "crates/user-code-storage",
  "crates/persistence-sqlite",
  "crates/runtime-app",
  "crates/runtime-core",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
rust-version = "1.97"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["backup", "bundled"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.18", features = ["v7", "serde"] }
zip = { version = "7.2", default-features = false, features = ["deflate"] }
boa_engine = "0.21.1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
