[workspace]
members = [
  "apps/cli",
  "crates/agent-runtime",
  "crates/agent-workspace-host",
  "crates/agent-auto-host",
  "crates/agent-context-admission",
  "crates/module-agent-adapter",
  "crates/skill-runtime",
  "crates/skill-host",
  "crates/skill-worker",
  "crates/skill-package",
  "crates/secret-store",
  "crates/agent-provider-worker",
  "crates/agent-tools",
  "crates/automation-runtime",
  "crates/automation-agent-bridge",
  "crates/automation-capability-bridge",
  "crates/diagnostics-bundle",
  "crates/creator-draft",
  "crates/creator-composition",
  "crates/capability-contract",
  "crates/asset-installer",
  "crates/model-importer",
  "crates/system-context",
  "crates/system-context-sensor",
  "crates/user-code-policy",
  "crates/user-code-host",
  "crates/user-code-gateway",
  "crates/user-code-worker",
  "crates/user-code-package",
  "crates/user-code-storage",
  "crates/persistence-sqlite",
  "crates/runtime-app",
  "crates/runtime-core",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
rust-version = "1.97"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rusqlite = { version = "0.38", features = ["backup", "bundled"] }
thiserror = "2.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros", "local-offset"] }
uuid = { version = "1.18", features = ["v7", "serde"] }
zip = { version = "7.2", default-features = false, features = ["deflate"] }
boa_engine = "0.21.1"
ignore = "0.4"
wait-timeout = "0.2"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "sync-secret-service"] }
zeroize = { version = "1.8", features = ["serde"] }
chacha20poly1305 = "0.10"
getrandom = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
