[package]
name = "nimora-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nimora"
path = "src/main.rs"

[dependencies]
nimora-agent-runtime = { path = "../../crates/agent-runtime" }
nimora-agent-provider-worker = { path = "../../crates/agent-provider-worker" }
nimora-agent-tools = { path = "../../crates/agent-tools" }
nimora-agent-workspace-host = { path = "../../crates/agent-workspace-host" }
nimora-persistence-sqlite = { path = "../../crates/persistence-sqlite" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
