[package]
name = "nimora-agent-provider-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "nimora-agent-provider-worker"
path = "src/main.rs"

[dependencies]
nimora-agent-runtime = { path = "../agent-runtime" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
nimora-runtime-core = { path = "../runtime-core" }
uuid.workspace = true

[lints]
workspace = true
