[package]
name = "nimora-agent-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-agent-runtime = { path = "../agent-runtime" }
nimora-capability-contract = { path = "../capability-contract" }
nimora-runtime-core = { path = "../runtime-core" }
nimora-user-code-gateway = { path = "../user-code-gateway" }
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
