[package]
name = "nimora-asset-installer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-model-importer = { path = "../model-importer" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
zip = { version = "7.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
