[package]
name = "nimora-automation-capability-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-automation-runtime = { path = "../automation-runtime" }
nimora-runtime-core = { path = "../runtime-core" }
nimora-user-code-gateway = { path = "../user-code-gateway" }
serde_json.workspace = true
uuid.workspace = true

[lints]
workspace = true
