[package]
name = "nimora-creator-draft"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-asset-installer = { path = "../asset-installer" }
nimora-automation-runtime = { path = "../automation-runtime" }
nimora-skill-runtime = { path = "../skill-runtime" }
nimora-user-code-policy = { path = "../user-code-policy" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
