[package]
name = "nimora-desktop-context-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Windows desktop environment sampler for Nimora lifeform context"
publish = false

[dependencies]
serde.workspace = true
thiserror.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Power",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_HiDpi",
] }

[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
