[package]
name = "nimora-module-agent-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-agent-context-admission = { path = "../agent-context-admission" }
nimora-agent-runtime = { path = "../agent-runtime" }
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
