[package]
name = "nimora-persistence-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-agent-runtime = { path = "../agent-runtime" }
nimora-automation-runtime = { path = "../automation-runtime" }
nimora-runtime-app = { path = "../runtime-app" }
nimora-runtime-core = { path = "../runtime-core" }
chacha20poly1305.workspace = true
getrandom.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
url = "2.5"
zeroize.workspace = true

[lints]
workspace = true
