[package]
name = "nimora-skill-host"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-skill-runtime = { path = "../skill-runtime" }
nimora-user-code-policy = { path = "../user-code-policy" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
