[package]
name = "nimora-system-context-sensor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-system-context = { path = "../system-context" }
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
