[package]
name = "nimora-system-context-windows"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging"] }

[lints.rust]
unsafe_code = "allow"
missing_debug_implementations = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
