[package]
name = "nimora-user-code-package"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-asset-installer = { path = "../asset-installer" }
nimora-user-code-policy = { path = "../user-code-policy" }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
sha2.workspace = true

[lints]
workspace = true
