[package]
name = "nimora-user-code-package"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nimora-asset-installer = { path = "../asset-installer" }
nimora-user-code-policy = { path = "../user-code-policy" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[lints]
workspace = true
