[package]
name = "nimora-user-code-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine.workspace = true
nimora-user-code-host = { path = "../user-code-host" }
serde_json.workspace = true

[lints]
workspace = true
