[package]
name = "nimora-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "nimora_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
nimora-asset-installer = { path = "../../../crates/asset-installer" }
nimora-persistence-sqlite = { path = "../../../crates/persistence-sqlite" }
nimora-runtime-app = { path = "../../../crates/runtime-app" }
nimora-runtime-core = { path = "../../../crates/runtime-core" }
nimora-user-code-policy = { path = "../../../crates/user-code-policy" }
nimora-user-code-gateway = { path = "../../../crates/user-code-gateway" }
nimora-user-code-host = { path = "../../../crates/user-code-host" }
nimora-user-code-package = { path = "../../../crates/user-code-package" }
nimora-user-code-storage = { path = "../../../crates/user-code-storage" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon"] }
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
