[package]
name = "nimora-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "nimora_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
sha2.workspace = true
tauri-build = { version = "2.5", features = [] }

[dependencies]
nimora-module-agent-adapter = { path = "../../../crates/module-agent-adapter" }
nimora-agent-provider-worker = { path = "../../../crates/agent-provider-worker" }
nimora-agent-auto-host = { path = "../../../crates/agent-auto-host" }
nimora-agent-runtime = { path = "../../../crates/agent-runtime" }
nimora-agent-workspace-host = { path = "../../../crates/agent-workspace-host" }
nimora-agent-tools = { path = "../../../crates/agent-tools" }
nimora-capability-contract = { path = "../../../crates/capability-contract" }
nimora-automation-agent-bridge = { path = "../../../crates/automation-agent-bridge" }
nimora-automation-capability-bridge = { path = "../../../crates/automation-capability-bridge" }
nimora-automation-runtime = { path = "../../../crates/automation-runtime" }
nimora-creator-draft = { path = "../../../crates/creator-draft" }
nimora-creator-composition = { path = "../../../crates/creator-composition" }
nimora-asset-installer = { path = "../../../crates/asset-installer" }
nimora-model-importer = { path = "../../../crates/model-importer" }
nimora-system-context = { path = "../../../crates/system-context" }
nimora-system-context-sensor = { path = "../../../crates/system-context-sensor" }
nimora-diagnostics-bundle = { path = "../../../crates/diagnostics-bundle" }
nimora-persistence-sqlite = { path = "../../../crates/persistence-sqlite" }
nimora-runtime-app = { path = "../../../crates/runtime-app" }
nimora-runtime-core = { path = "../../../crates/runtime-core" }
nimora-secret-store = { path = "../../../crates/secret-store" }
nimora-skill-package = { path = "../../../crates/skill-package" }
nimora-skill-host = { path = "../../../crates/skill-host" }
nimora-skill-runtime = { path = "../../../crates/skill-runtime" }
nimora-user-code-policy = { path = "../../../crates/user-code-policy" }
nimora-user-code-gateway = { path = "../../../crates/user-code-gateway" }
nimora-user-code-host = { path = "../../../crates/user-code-host" }
nimora-user-code-package = { path = "../../../crates/user-code-package" }
nimora-user-code-storage = { path = "../../../crates/user-code-storage" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tauri = { version = "2.11", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2.5"
tauri-plugin-dialog = "2.6"
tauri-plugin-single-instance = "2.3"
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zeroize.workspace = true
wait-timeout.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
nimora-system-context-windows = { path = "../../../crates/system-context-windows" }

[lints]
workspace = true

[dev-dependencies]
